--- a/src/popup.html
+++ b/src/popup.html
@@ -4,10 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>QR Links</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="msg">Searching for QR codes...</div>
+  <div class="wrapper">
+    <div id="msg">Searching for QR codes...</div>
+    <div id="animation-container">
+      <div id="animation">
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+      </div>
+    </div>
+  </div>
+
   <script src="background.js"></script>
 </body>
 </html>
